src/objects/Accessories_to_SFA_Field_mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>Accessories_Field__c</fullName>
        <label>Accessories Field</label>
        <metadataRelationshipControllingField>Accessories_to_SFA_Field_mappings__mdt.Accessories_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_mappings1</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Accessories_Object__c</fullName>
        <label>Accessories Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_mappings1</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_mappings1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SFA_Field__c</fullName>
        <label>SFA Field</label>
        <metadataRelationshipControllingField>Accessories_to_SFA_Field_mappings__mdt.SFA_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_mappings</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SFA_Object__c</fullName>
        <label>SFA Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Accessories_to_SFA_Field_mappings</relationshipLabel>
        <relationshipName>Accessories_to_SFA_Field_mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Accessories to SFA Field mappings</label>
    <pluralLabel>Accessories to SFA Field mappings</pluralLabel>
</CustomObject>